--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/react": "^11.7.0",
+    "firebase": "^9.6.3",
     "next": "12.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "recoil": "^0.5.2"
   },
   "devDependencies": {
     "@emotion/babel-preset-css-prop": "^11.2.0",
