--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/react": "^11.7.0",
+    "@octokit/core": "^3.5.1",
+    "dayjs": "^1.10.7",
     "firebase": "^9.6.3",
     "next": "12.0.5",
     "react": "17.0.2",
